玩转JVM中的对象及引用